[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = fleck
description = Fast starspot rotational modulation light curves
long_description = Fast starspot rotational modulation light curves in Python
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = Other
url = https://github.com/bmorris3/fleck
edit_on_github = False
github_project = bmorris3/fleck
# install_requires should be formatted as a comma-separated list, e.g.:
install_requires = astropy, scipy, shapely, batman-package
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

